[package]
name = "ktr_agent"
version = "0.4.0"
edition = "2021"

[dependencies]
ktr_lib = { path = "../ktr_lib", features = ["serde"] }
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
humantime = "2.1.0"
