[package]
name = "ktr_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.34"
rand = "0.8"
rusqlite = { version = "0.29", features = ["bundled"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
quick_cache = { version = "0.4.0", default-features = false, features = ["ahash"] }

[features]
default = []
serde = ["dep:serde"]
