[package]
name = "ktr_lib"
version = "0.2.0"
edition = "2021"

[dependencies]
# pnet = { git = "https://github.com/kognise/libpnet-ipv6-layer3.git", rev = "5d5c347" }
pnet = { path = "/Users/kognise/Documents/Programming/github.com/libpnet/libpnet/" }
rand = "0.8"
rusqlite = { version = "0.29", features = ["bundled"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
quick_cache = { version = "0.4.0", default-features = false, features = ["ahash"] }
dns-lookup = "2.0.4"

[features]
default = []
serde = ["dep:serde"]
